# zubr_dsp

./: .gitignore  Cargo.toml  LICENSE  readme.md  rustc-ice-2026-04-20T19_33_52-179800.txt  rustc-ice-2026-04-20T19_33_52-179801.txt  rustc-ice-2026-04-20T19_33_53-179851.txt  rustc-ice-2026-04-20T19_33_53-179852.txt
.github/workflows/: ci.yml  rust.yml
benches/: mod.rs
benches/infrastructure/: mod.rs  test_models.rs
diagrams/: .$builder_lifecycle.drawio.bkp  .$dependenciy_management.drawio.bkp  .$dependency_management.drawio.bkp  .$frontend.drawio.bkp  .$new_builder.drawio.bkp  .$refactored_thread_pool.drawio.bkp  .$special_cases.drawio.bkp  Pipeline.drawio  builder_lifecycle.drawio  dependenciy_management.drawio  dependency_management.drawio  frontend.drawio  new_builder.drawio  ooc.drawio  special_cases.drawio  split.drawio
drawio/: .$dependenciy_management.drawio.bkp  dependenciy_management.drawio  refactored_thread_pool.drawio
examples/: main.rs
examples/basic/: am_end_to_end.rs  audio_test.rs  io_bound_breaker_reassemble.rs  mod.rs
prototypes/: audio_playback.rs  mod.rs
signals_playground/: AM.py  readme.md
src/: lib.rs  main.rs
src/dsp/: casting.rs  mod.rs
src/engine/: mod.rs
src/general/: mod.rs  parallel_computation.rs  tap.rs  throttle.rs  validation_functions.rs
src/pipeline/: api.rs  interfaces.rs  mod.rs
src/tests/: audio_file_playback.rs  audio_lpf.rs
tests/: mod.rs
tests/infrastructure/: interleaving_pipeline.rs  linear_pipeline.rs  mod.rs  reassembling_pipeline.rs  (+2 more)
tests_deprecated/: audio_file_playback.rs  audio_lpf.rs
(+167 files in other folders)
