[package]
name = "zubr_dsp"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
description = "a modular, fully parallelizable DSP pipeline for rust"
keywords = ["DSP", "zubr", "signal-processing", "parallelism"]
categories = ["concurrency", "asynchronous", "encoding", "mathematics", "multimedia"]
readme = "readme.md"
repository = "https://github.com/MalinkyZubr/zubr_dsp"

[dependencies]
async-std = "1.13.0"
futures = "0.3.31"
num = "0.4.3"
rand = "0.9.1"
crossbeam = "0.8"
rayon = "1.11.0"
atomic_enum = "0.3.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
strum = "0.26.3"
rusb = "0.9.4"
rustfft = "6"
symphonia = "0.5.4"
awedio = "0.5.0"
rodio = "0.21.1"
crossbeam-queue = "0.3.12"
env_logger = "0.11.8"
log = "0.4.27"
num_enum = "0.7.4"
thread-priority = "2.1.0"
plotters = "0.3.7"
systemstat = "0.2.5"
piston_window = "0.132.0"
plotters-piston = "0.3.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "6.0.0"
lazy_static = "1.5.0"
itertools = "0.14.0"
unicode-width = "0.2.0"
tui-logger = "0.17.3"
tui-big-text = "0.7.1"
tui-menu = "0.3.0"
tui-nodes = "0.9.0"
tui-tree-widget = "0.23.1"
rayon-core = "1.13.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "full"] }
async-trait = "0.1.89"
scc = "3.6.3"
zubr_state_machine = "0.1.0"
chrono = "0.4.41"
serial_test = "3.4.0"

